# pyblish-simple

./: README.md  pyproject.toml  requirements.txt
PyQt5_stylesheets/: pyqt5_style_Classic_rc.py  pyqt5_style_DarkOrange_rc.py  pyqt5_style_Dark_rc.py  pyqt5_style_black_rc.py  pyqt5_style_blue_rc.py  pyqt5_style_gray_rc.py  pyqt5_style_navy_rc.py  style_Dark.qss
docs/: README.md
pyblish_simple/: __init__.py  view.py
