[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["pyblish_simple"]


[project]
name = "pyblish-simple"
authors = [
    {name = "Hannes"},
]
description = "a GUI for pyblish, to see which instance failed and why"
readme = "docs/README.md"
requires-python = ">=3.4"
keywords = ["plugin", "pyblish", "add-on", "extension", "manager", "studio", "dcc", "app", "application", "artist"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"', "Qt.py", "pyblish"]
#dynamic = ["version"]
version = "0.0.2"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/pyblish-simple"
Source = "https://github.com/hannesdelbeke/pyblish-simple"
